test/src/e2e_vm_tests/test_programs/should_pass/language/marker_traits/marker_trait_enum_implemented_for_all_enums/src/enums_01.sw
library;

pub enum LibEnum01 {
    A: ()
}

pub enum EmptyLibEnum01 { }