test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_abi_names/src/other.sw
library;

pub struct OtherStruct {

}

pub enum OtherEnum {
  A: ()
}
